@@ -4101,6 +4101,8 @@ int util_write_configfile(void)
  
   if (menu_limit_menu_open.v)                 ADD_STRING_CONFIG,"--limitopenmenu");
 
+  if (menu_show_advanced_items.v)               ADD_STRING_CONFIG,"--advancedmenus");
+
   if (setting_machine_selection_by_name.v)    ADD_STRING_CONFIG,"--setmachinebyname");
 
   if (menu_filesel_hide_dirs.v)         ADD_STRING_CONFIG,"--filebrowser-hide-dirs");
